--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="ed_sheeran">Ed Sheeran</string>
     <string name="now_playing">Now playing</string>
     <string name="music_life">Music Life</string>
+    <string name="_00_00">00:00</string>
 </resources>
