--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="_00_00">00:00</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="no_results_found">No results found</string>
+    <string name="search_musiclife">Search MusicLife</string>
+    <string name="find_artists_tracks_albums_and_playlist">Find artists, tracks, albums, and playlist.</string>
 </resources>
