--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,22 @@
     <string name="no_results_found">No results found</string>
     <string name="search_musiclife">Search MusicLife</string>
     <string name="find_artists_tracks_albums_and_playlist">Find artists, tracks, albums, and playlist.</string>
+    <string name="ok">OK</string>
+    <string name="cancel">CANCEL</string>
+
+    <string name="email_address">Username or Email</string>
+    <string name="password">Password</string>
+    <string name="login_now">Login</string>
+    <string name="create_login">Sign Up</string>
+    <string name="don_t_remember_password">Don\'t Remember password?</string>
+    <string name="dont_have_an_account">Don\'t have an account?</string>
+    <string name="sign_in_with_facebook">Sign in with Facebook</string>
+    <string name="or">or</string>
+    <!--    share-->
+    <string name="facebook_app_id">734170097243733</string>
+    <string name="fb_login_protocol_scheme">fb734170097243733</string>
+
+
+    <string name="facebook_app_id2">469435510525416</string>
+    <string name="facebook_login_protocol_scheme2">fb469435510525416</string>
 </resources>
