--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
 
     <string name="facebook_app_id2">469435510525416</string>
     <string name="facebook_login_protocol_scheme2">fb469435510525416</string>
+    <string name="lyric">Lyric:</string>
 </resources>
